engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__messages__tests__spoken_user_prompt.snap
---
source: tui/src/history_cell/messages_tests.rs
assertion_line: 107
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 3 },
    content: [
        "                                        ",
        "› hello from voice                      ",
        "                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
